fix overflow mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,5 +26,11 @@ body {
 }
 
 html, body {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
